k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitreleases
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: gitreleases
spec:
  tls:
    - hosts:
        - gitreleases.dev
      secretName: gitreleases-tls
  rules:
    - host: gitreleases.dev
      http:
        paths:
          - backend:
              serviceName: gitreleases
              servicePort: http
